--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
+  <style >
+     html,body{
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      font-size: 14px;
+    }
+    ul,li{
+      list-style: none;
+    }
+  </style>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
