--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       padding: 0;
       font-size: 14px;
     }
+    *{
+      margin: 0;
+      padding: 0;
+    }
     ul,li{
       list-style: none;
     }
